# django-celary-beat

./: .env  .env.dist  .gitignore  README.md  create_tasks_in_batch_example.json  docker-compose.yml
.github/workflows/: ci.yml
misc/: pre-commit.sh  pre-push.sh
project/: Dockerfile  celerybeat-schedule  entrypoint.sh  pyproject.toml  requirements.txt
project/core/: settings.py  tasks.py  urls.py
project/orders/management/commands/: my_custom_command.py
project/orders/migrations/: 0001_initial.py
project/tasks/: handlers.py  models.py  serializers.py  tests.py  urls.py  views.py
project/tasks/management/commands/: process_task_schedules.py
project/tasks/migrations/: 0001_initial.py  0002_alter_taskschedule_schedule_x_times.py
