[tool.poetry]
name = "app"
version = "1.0.0"
description = ""
authors = ["Rares"]

[tool.poetry.dependencies]
python = "^3.11"
Django = "5.0.7"
celery = "5.4.0"
redis = "5.0.7"
asgiref = "3.8.1"
psycopg2-binary = "2.9.10"
sqlparse = "0.5.3"
djangorestframework = "3.16.0"

[tool.poetry.dev-dependencies]
black = "24.10.0"
ruff = "0.6.9"
mypy = "1.5.0"
drf-yasg = "1.21.10"
parameterized = "0.9.0"
flower = "1.2.0"

[tool.black]
line-length = 88
target-version = [ "py310", "py311" ]
exclude = "/\\.eggs|\\.git|\\.pytest_cache|\\.cache|\\.venv|build|dist/"

[tool.ruff]
cache-dir = "~/.cache/ruff"
line-length = 88
exclude = [".git", "__pycache__", ".mypy_cache", ".pytest_cache", ".cache", ".venv"]
lint.select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    # "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
lint.ignore = [
    "B904",
    "E722",
    "B006",
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
cache_dir = "~/.cache/mypy"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
